@@ -7,7 +7,12 @@ Chaînes auquelles il faudra demander la traduction AVANT UNE NOUVELLE VERSION :
             "Disable FireGPG's auto updates"
             "Warning ! You shouldn't trun off autoupdates if you can't update FireGPG with FireFox, or if you don't check regulary news versions of your addons !"
             "Are you realy sure ? We recomand not turn off this option, she is here for help you to have every time latest updates of FireGPG, who is still in beta and can have security issues !"
+            "Name"
+            "Id"
+            "Created"
+            "Expire"
         - firegpg.properties
+
 
 Tâches libres :
 	- ajouter la possibilité de chiffrer et signer en même temps
