@@ -36,6 +36,8 @@
   - ***** END LICENSE BLOCK ***** -->
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
+<!DOCTYPE prefwindow SYSTEM "chrome://firegpg/locale/prefwindow.dtd">
+<!-- Use the same of option windows, beacause there are only 4 strings, who are the same -->
 <dialog id="list-dialog" title="default title" orient="vertical" autostretch="always"
         onload="onLoad(this);" buttons="accept,cancel"
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
@@ -43,6 +45,12 @@
   <script src="list.js"/>
   <description control="list" id="description" value="default description"/>
   <listbox id="list" seltype="multiple" flex="1" rows="20" style="width:35em">
+    <listhead>
+        <listheader label="&key-name;"></listheader>
+        <listheader label="&key-id;"></listheader>
+        <listheader label="&key-create;"></listheader>
+        <listheader label="&key-expire;"></listheader>
+    </listhead>
   </listbox>
 </dialog>
 
